--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
-  <body class="bg-linear-to-bl from-gray-50 to-gray-200">
+  <body
+    class="min-h-screen bg-linear-to-bl from-gray-50 to-gray-200 text-gray-500 dark:from-gray-950 dark:to-gray-800 dark:text-gray-50"
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
